<resources>
    <string name="app_name">Pushay</string>
    <string name="pick_image_intent_text">Elegir imagen</string>
    <string name="perm_camera">Se necesitan permisos para la cámara</string>
    <string name="demo_min_label">min</string>
    <string name="demo_max_label">max</string>

    //login strings
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>

    //Register strings
    <string name="name">Nombres y Apellidos</string>
    <string name="firstname">Nombre</string>
    <string name="lastname">Apellidos</string>
    <string name="birth">Fecha de nacimiento</string>
    <string name="cellphone">Celular</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="create">Crear cuenta</string>

    //Change Password strings
    <string name="old_password">Contraseña actual</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="new_password_again">Repita su nueva contraseña</string>
    <string name="change_pass">Cambiar contraseña</string>

    //Selected place
    <string name="selected">Selecciona el día que quieres \nir a este lugar con tu guía</string>
    <string name="selected_date">dd/mm/aaaa</string>

    <string name="decript">Descripción</string>
    <string name="decript_guide">descripción</string>

    //Paid Ticket
    <string name="detail">*No te olvides de presentar tu código al guía \ncuando
        finalice tu recorrido para validarlo. </string>
    <string name="thanks">¡Qué disfrutes tu viaje!</string>

    //Buy Ticket
    <string name="buy_package">¿Qué paquete deseas adquirir?</string>

    <string name="facebook_app_id">1413332452059501</string>


    //Dialog Register User
    <string name="title_register">Hola! </string>
    <string name="title_2">Gracias por registrarte como guía en Pushay </string>
    <string name="confirm">Te estaremos contactando en los próximos días para validar tus datos</string>



    //Details strings
    <string name="locality">Lugar de encuentro</string>
    <string name="hour">Hora de encuentro</string>
    <string name="status">NO VALIDADO</string>
    <string name="price">PRECIO</string>
    <string name="stars">CALIFICACIÓN</string>
    <string name="name_guide">Nombre del guía: </string>
    <string name="pay_total">Precio del viaje: </string>
    <string name="date_travel">Fecha del viaje: </string>


</resources>
