<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_free">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/xxxlarge_text"
                android:text="Obtener una cuenta"
                android:layout_marginBottom="15dp"
                android:gravity="center"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/name"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_bith"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/birth"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/email"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="300dp"
                android:layout_gravity="center_horizontal"
                android:textColorHint="@color/white"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_celphone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:hint="@string/cellphone"
                    android:textColor="@color/white"
                    android:inputType="textEmailAddress"
                    android:padding="10dp" />
            </android.support.design.widget.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_man"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />
                <Button
                    android:id="@+id/btn_woman"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/female"/>
            </LinearLayout>
            <Button
                android:id="@+id/btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="Crear Cuenta"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>