<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:background="@color/white"
            android:id="@+id/frame_container"
            android:weightSum="1"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="15dp"
                android:id="@+id/layout_container"
                android:layout_gravity="top"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_current_password"
                        android:layout_width="match_parent"
                        android:theme="@style/TextLabel"
                        android:layout_height="wrap_content" >
                        <EditText
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/old_password"
                            android:inputType="textPassword"
                            android:id="@+id/et_current_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel">
                        <EditText
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/new_password"
                            android:inputType="textPassword"
                            android:backgroundTint="@color/black_select"
                            android:id="@+id/et_new_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_new_password_again"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TextLabel">
                        <EditText
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="5dp"
                            android:hint="@string/new_password_again"
                            android:inputType="textPassword"
                            android:id="@+id/et_new_password_again"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/button_secondary"
                    android:layout_marginTop="50dp"
                    android:id="@+id/btn_change_pass"
                    android:textColor="@color/white"
                    android:text="@string/change_pass"/>

            </LinearLayout>

        </FrameLayout>

    </ScrollView>


</LinearLayout>