<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp"
    android:layout_margin="3dp"
    card_view:cardUseCompatPadding="true"
    android:background="?android:attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="80dp"
                    android:layout_marginLeft="5dp"
                    android:layout_height="80dp"
                    android:id="@+id/im_perfil"
                    android:src="@drawable/photo_guide"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:orientation="vertical">
                <TextView
                    android:ellipsize="end"
                    fontPath="fonts/Gotham-Medium.otf"
                    android:id="@+id/tv_name_city"
                    android:gravity="left"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>
                <TextView
                    android:id="@+id/tv_descript_city"
                    android:gravity="left"
                    android:maxLines="1"
                    android:textSize="13dp"
                    android:textColor="@color/dark_gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/decript_guide"/>
                <TextView
                    android:id="@+id/tv_date"
                    android:textSize="13dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_date"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:textSize="13dp"
                        android:id="@+id/tv_package_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textStyle="italic"
                        android:textSize="13dp"
                        android:id="@+id/tv_package_date"
                        android:layout_marginLeft="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="9:00am - 6:00pm"/>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/line"/>
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/image_ticket"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
