<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="?android:attr/selectableItemBackground"
    android:elevation="5dp"
    card_view:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ly_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/im_photo"
                android:layout_gravity="center_vertical"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:src="@drawable/photo_guide" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ly_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@+id/ly_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_travel"
                fontPath="fonts/Gotham-Medium.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Destino"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/smallest_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_travel"
                fontPath="fonts/Gotham-Medium.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lugar del recorrido"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorPrimary"></View>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_view_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_guide"
                    android:layout_marginStart="5dp"
                    android:textSize="@dimen/tiny_text" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_name"
                fontPath="fonts/Gotham-Medium.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/firstname"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/large_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_view_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_travel"
                    android:layout_marginStart="5dp"
                    android:textSize="@dimen/tiny_text" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_date"
                fontPath="fonts/Gotham-Medium.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Paquete"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:background="@drawable/circle_view_dark"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pay_total"
                    android:layout_marginStart="5dp"
                    android:textSize="@dimen/tiny_text" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_price"
                fontPath="fonts/Gotham-Medium.otf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Paquete"
                android:layout_marginStart="15dp"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold" />




        </LinearLayout>

        <ImageView
            android:id="@+id/im_validate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_no_valid"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>
