<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
           android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/xlarge_text"
                    android:text="Hola, " />
                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/xlarge_text"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/name"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Gracias por comprar en PUSHAY" />
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Destino"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/xlarge_text" />

            <TextView
                android:id="@+id/tv_destiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Arequipa - Monasterio Santa Catalina" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Guía"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/xlarge_text" />

                    <TextView
                        android:id="@+id/tv_guide"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Jordan Clarens" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Día"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/xlarge_text" />
                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_date" />
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Lugar y hora de encuentro"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/xlarge_text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Full Day /" />

                <TextView
                    android:id="@+id/tv_service_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 9:00am - 6:00pm" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Contacta a tu guía"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/xlarge_text" />

            <TextView
                android:id="@+id/tv_cell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#########" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Código para validar el viaje"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/xlarge_text" />

            <TextView
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="#########" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/detail"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="@dimen/xxlarge_text"
                android:textColor="@color/colorPrimary"
                android:text="@string/thanks"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>